--- a/Task5/Main.ipynb
+++ b/Task5/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -171,9 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4.990234375, 10)\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -404,7 +411,7 @@
          "yaxis": "y"
         },
         {
-         "mode": "lines+markers",
+         "mode": "markers",
          "name": "HalfDivision",
          "type": "scatter",
          "x": [
@@ -1382,8 +1389,9 @@
     "fig = px.line(x=x, y=y)\n",
     "\n",
     "\n",
-    "fig.add_scatter(x=x_pred, y=y_pred, mode='lines+markers', name='HalfDivision')\n",
+    "fig.add_scatter(x=x_pred, y=y_pred, mode='markers', name='HalfDivision')\n",
     "\n",
+    "print(HalfDivision(Laplas, -1, -5, 5))\n",
     "\n",
     "fig.show()"
    ]
@@ -1397,14 +1405,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "Число итераций: 7\n"
      ]
     },
     {
@@ -2503,7 +2511,7 @@
     "# Массив x\n",
     "x = linspace(x0, x1, N + 1)\n",
     "\n",
-    "# Функция генераци якобиана для уравнения y'' - y^3 = x^2, при замене второй производной по разностной схеме для всех точек x\n",
+    "# Функция генерации якобиана для уравнения y'' - y^3 = x^2, при замене второй производной по разностной схеме для всех точек x\n",
     "# y - Массив текущих приближённых значений \n",
     "def jacobian(*y):\n",
     "    N = len(y)\n",
@@ -2535,7 +2543,7 @@
     "y = [starty(xp) for xp in x]\n",
     "\n",
     "res, iters = NewtonSystem(jacobian, funcs, y, maxIter=30, epsilon=1e-15)\n",
-    "print(\"Число итераций: {iters}\")\n",
+    "print(f\"Число итераций: {iters}\")\n",
     "fig = px.line(x=x, y=res)\n",
     "\n",
     "fig.show()\n"
