Finished lab 6, got automate for subject

--- a/Task6/Main.ipynb
+++ b/Task6/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3141,7 +3141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -5064,14 +5064,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Двукратный интеграл: 0.15385972074794285\n"
+      "Двукратный интеграл: 0.6666666666666666\n"
      ]
     }
    ],
@@ -5079,69 +5079,52 @@
     "def func(x, y):\n",
     "    return x**2 + y**2 + 1\n",
     "\n",
-    "x = np.linspace(0, 1.2, 13)\n",
-    "y = np.linspace(0, 1.2, 13)\n",
-    "z = [[func(x[i], y[j]) for i in range(len(x))] for j in range(len(y))]\n",
+    "N_Y = 10\n",
+    "N_X = 8\n",
     "\n",
-    "integrals = []\n",
-    "N_Y = 20\n",
-    "N_X = 10\n",
-    "f = Spline2DFunc(x, y, z)\n",
+    "innerIntegralFunc = lambda y: GaussIntegral(0, 1 - y, N_X, lambda x: func(x, y))\n",
     "\n",
-    "ySurf = np.linspace(0, 1, N_Y)\n",
-    "for i in range(len(ySurf)):\n",
-    "    fRow = lambda x: f(x, ySurf[i])\n",
-    "    integrals.append(GaussIntegral(0, 1 - ySurf[i], N_X, fRow))\n",
-    "\n",
-    "f = SplineFunc(ySurf, integrals)\n",
-    "\n",
-    "res = SympsonIntegral(y, f)\n",
+    "res = SympsonIntegral(np.linspace(0, 1, N_Y), innerIntegralFunc)\n",
     "print(f\"Двукратный интеграл: {res}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Двукратный интеграл без замены переменных: 0.5743309591419247\n"
+      "Двукратный интеграл без замены переменных: 0.578589676644161\n"
      ]
     }
    ],
    "source": [
     "x, y, z = Readfunction(\"data.txt\")\n",
     "\n",
-    "integrals = []\n",
-    "N_Y = 6\n",
-    "N_X = 2\n",
+    "N_Y = 10\n",
+    "N_X = 8\n",
     "f = Spline2DFunc(x, y, z)\n",
     "\n",
-    "ySurf = np.linspace(0, 1, N_Y)\n",
-    "for i in range(len(ySurf)):\n",
-    "    fRow = lambda x: f(x, ySurf[i])\n",
-    "    integrals.append(GaussIntegral(0, 1 - ySurf[i], N_X, fRow))\n",
+    "innerIntegralFunc = lambda y: GaussIntegral(0, 1 - y, N_X, lambda x: f(x, y))\n",
     "\n",
-    "f = SplineFunc(ySurf, integrals)\n",
-    "\n",
-    "res = SympsonIntegral(y, f)\n",
+    "res = SympsonIntegral(np.linspace(0, 1, N_Y), innerIntegralFunc)\n",
     "\n",
     "print(f\"Двукратный интеграл без замены переменных: {res}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Двукратный интеграл без замены переменных: 0.5744137151997496\n"
+      "Двукратный интеграл: 0.5779805625579728\n"
      ]
     }
    ],
@@ -5150,22 +5133,40 @@
     "\n",
     "z = [[np.log(z[j][i]) for i in range(len(x))] for j in range(len(y))]\n",
     "\n",
-    "integrals = []\n",
-    "N_Y = 6\n",
-    "N_X = 2\n",
+    "N_Y = 10\n",
+    "N_X = 8\n",
     "f = Spline2DFunc(x, y, z)\n",
     "\n",
-    "ySurf = np.linspace(0, 1, N_Y)\n",
-    "# xSurf = np.linspace(0, 1, N_X)\n",
-    "for i in range(len(ySurf)):\n",
-    "    fRow = lambda x: np.exp(f(x, ySurf[i]))\n",
-    "    integrals.append(GaussIntegral(0, 1 - ySurf[i], N_X, fRow))\n",
+    "innerIntegralFunc = lambda y: GaussIntegral(0, 1 - y, N_X, lambda x: np.exp(f(x, y)))\n",
     "\n",
-    "f = SplineFunc(ySurf, integrals)\n",
+    "res = SympsonIntegral(np.linspace(0, 1, N_Y), innerIntegralFunc)\n",
     "\n",
-    "res = SympsonIntegral(y, f)\n",
+    "print(f\"Двукратный интеграл: {res}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Двукратный интеграл: 0.11904763102287128\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(x, y):\n",
+    "    return x + y**2\n",
     "\n",
-    "print(f\"Двукратный интеграл без замены переменных: {res}\")"
+    "N_Y = 10\n",
+    "N_X = 8\n",
+    "\n",
+    "f = lambda y: SympsonIntegral(np.linspace(y, sqrt(y), N_X), lambda x: func(x, y))\n",
+    "res = GaussIntegral(0, 1, N_Y, f)\n",
+    "print(f\"Двукратный интеграл: {res}\")"
    ]
   },
   {
@@ -5177,7 +5178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
